--- a/assignments.ipynb
+++ b/assignments.ipynb
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -419,9 +419,9 @@
       "<>:7: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "<>:6: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "<>:7: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "/tmp/ipykernel_8953/765320295.py:6: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "<ipython-input-15-d776022229fa>:6: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "  identity_compare4 = 9 is not 10 # True\n",
-      "/tmp/ipykernel_8953/765320295.py:7: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "<ipython-input-15-d776022229fa>:7: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "  identity_compare5 = \"Same\" is not \"Same\" # False\n"
      ]
     }
@@ -464,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
